update: add logic to determine if OS is capitalized or not and create the correct download url

--- a/templates/tarball/Makefile
+++ b/templates/tarball/Makefile
@@ -2,6 +2,8 @@
 include ../../tasks/Makefile.package
 include ../../tasks/Makefile.apk
 
+OS_UPPER=$(shell uname -s)
+
 export VENDOR = {{ .Env.VENDOR }}
 export PACKAGE_NAME = {{ .Env.APP }}
 export PACKAGE_REPO_NAME = {{ .Env.REPO }}
